# rop3_etractor_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ackermann.yaml  diffdrive.yaml  gazebo_ros_control_params.yaml
launch/: gazebo.launch  gazebo_empty_world_diffdrive.launch  gazebo_run.launch
meshes/: baseframe.dae
rviz/: urdf.rviz  urdf.vcg
urdf/: etractor_diffdrive.urdf.xacro
urdf/includes/: inertials.urdf.xacro  materials.urdf.xacro  properties.urdf.xacro
urdf/sensoric/: 360_cam_sys.urdf.xacro  generic_cam.urdf.xacro  zed2_simple.urdf.xacro
worlds/: simple.world  terrain.world  trees.world
