<package>
  <name>rop3_etractor_sim</name>
  <version>0.5.0</version>

  <description>This package contains the simulation modell of the e-tractor</description>
  <author email="sandro.steinhuber@avl.com">Sandro Steinhuber</author>

  <maintainer email="sandro.steinhuber@avl.com">Sandro Steinhuber</maintainer>

  <license>all rights belong to AVL-CDTE GmbH, 4400 Steyr, AUT </license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>transmission_interface</run_depend>
</package>
